--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "16.9.0",
     "bootstrap": "^4.3.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "survey-react": "^1.1.8",
