--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "bootstrap": "^4.3.1",
+    "lodash": "^4.17.15",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "survey-react": "^1.1.8",
+    "timeline-plus": "^2.4.0",
     "typescript": "3.6.2"
   },
   "scripts": {
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^4.3.5",
+    "@types/lodash": "^4.14.138",
     "node-sass": "^4.12.0"
   }
 }
