--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "survey-react": "^1.1.8",
     "typescript": "3.6.2"
@@ -37,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^4.3.5",
     "node-sass": "^4.12.0"
   }
 }
