--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
     "survey-react": "^1.1.8",
     "timeline-plus": "^2.4.0",
-    "typescript": "3.6.2"
+    "typescript": "3.6.2",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,8 +43,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^4.3.5",
     "@types/lodash": "^4.14.138",
+    "@types/react-redux": "^7.1.2",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/uuid": "^3.4.5",
     "node-sass": "^4.12.0"
   }
 }
