--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "survey-react": "^1.1.12",
-    "timeline-plus": "^2.4.0",
     "typescript": "3.6.2",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "vis-timeline": "^6.0.3"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
