mp-23 add about / version
* Add an about link to the auth dropdown menu
* Create version setup using env variables and git rev-parse
* Add Settings page, which only contains the app version number

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "vis-timeline": "^6.2.0"
   },
   "scripts": {
-    "start": "BROWSER=none react-scripts start",
-    "build": "react-scripts build",
+    "start": "REACT_APP_VERSION=dev BROWSER=none react-scripts start",
+    "build": "REACT_APP_VERSION=$(git rev-parse HEAD) react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
