--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "@types/react-select": "^3.0.8",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "jsx-to-string": "^1.4.0",
@@ -16,6 +17,7 @@
     "react-infinite-calendar": "^2.3.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
+    "react-select": "^3.0.8",
     "redux": "^4.0.4",
     "survey-react": "^1.1.12",
     "typescript": "3.6.2",
