--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "@types/react-addons-css-transition-group": "^15.0.5",
     "@types/react-select": "^3.0.8",
+    "@types/react-transition-group": "^4.2.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "jsx-to-string": "^1.4.0",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.9.0",
     "react-infinite-calendar": "^2.3.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.0.8",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "survey-react": "^1.1.12",
     "typescript": "3.6.2",
