--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.3.1",
     "jsx-to-string": "^1.4.0",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.0.0-beta.14",
@@ -61,6 +62,6 @@
     "@types/react-router-dom": "^5.1.2",
     "@types/uuid": "^3.4.5",
     "node-sass": "^4.12.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "^3.3.0"
   }
 }
