--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsx-to-string": "^1.4.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "omit-deep-lodash": "^1.1.4",
     "react": "^16.9.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.0.0-beta.14",
