--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "react-router-dom": "^5.1.2",
     "react-select": "^3.0.8",
     "react-transition-group": "^4.3.0",
+    "serve": "^11.3.0",
     "survey-react": "^1.1.12",
     "typescript": "^3.7.5",
     "uuid": "^3.3.3",
     "vis-timeline": "^6.2.0"
   },
   "scripts": {
-    "start": "REACT_APP_VERSION=dev BROWSER=none react-scripts start",
+    "start": "serve -s build",
+    "dev": "REACT_APP_VERSION=dev BROWSER=none react-scripts start",
     "build": "REACT_APP_VERSION=$(git rev-parse HEAD) react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
