--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "millimed",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "@apollo/client": "^3.0.0-beta.38",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
